@@ -34,6 +34,7 @@ gint detect_playlist(gchar * filename);
 gint parse_playlist(gchar * filename);
 gint parse_basic(gchar * filename);
 gint parse_cdda(gchar * filename);
+gboolean save_playlist_pls(gchar *filename);
 
 gboolean update_mplayer_config();
 gboolean send_command(gchar * command);
